<resources>
    <string name="app_name">Centro Integral Alerce - Gestión de Citas</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registro">Registro</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="santo_tomas">Santo Tomas</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="configuraci_n">Configuración</string>
    <string name="crear_tipo_actividad" />
    <string name="configuracion" />
    <string name="calendario" />
    <string name="actividades" />
    <string name="eliminar_actividad" />
    <string name="editar_actividad" />
</resources>