<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">

            <TextView
                style="@style/TitleText"
                android:text="@string/registro"/>

            <EditText
                style="@style/EditTextView"
                android:id="@+id/signup_email"
                android:hint="@string/correo_electronico"
                android:drawableStart="@drawable/baseline_person_24"
                android:textColor="@color/black" />

            <EditText
                style="@style/EditTextView"
                android:id="@+id/signup_password"
                android:hint="@string/contrase_a"
                android:drawableStart="@drawable/baseline_lock_person_24"
                android:textColor="@color/black" />

            <Button
                style="@style/ButtonStyle"
                android:id="@+id/signup_button"
                android:text="@string/registrarse"
                app:cornerRadius = "20dp"
                />

            <TextView
                style="@style/LoginRedirectText"
                android:id="@+id/loginRedirectText"
                android:text="Ya soy usuario" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>