<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Título -->
    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lista de Actividades"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Botón para crear nueva actividad -->
    <Button
        android:id="@+id/btnCrearActividad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Crear Nueva Actividad"
        android:textColor="@color/white"
        android:backgroundTint="@color/slateblue"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/textViewTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Lista de actividades -->
    <ListView
        android:id="@+id/listViewActividades"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@id/btnCrearActividad"
        app:layout_constraintBottom_toTopOf="@id/bottom_buttons"/>
    <!-- Barra de navegación en la parte inferior -->
    <LinearLayout
        android:id="@+id/bottom_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_layout"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/btn_activities"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/actividades"
            android:scaleType="centerInside"
            android:src="@drawable/actividad" />

        <ImageButton
            android:id="@+id/btn_calendar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/calendario"
            android:scaleType="centerInside"
            android:src="@drawable/calendario" />

        <ImageButton
            android:id="@+id/btn_settings"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/configuracion"
            android:scaleType="centerInside"
            android:src="@drawable/configuracion" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
